// Code generated by xo. DO NOT EDIT.

package table

import (
	"database/sql"

	sq "github.com/elgris/sqrl"
	"github.com/ketan-10/training/backend/internal"
	"github.com/pkg/errors"
)

type Students struct {
	ID          int           `json:"id" db:"id"`
	UUID        string        `json:"uuid" db:"uuid"`
	Name        string        `json:"name" db:"name"`
	Email       string        `json:"email" db:"email"`
	MobilePhone string        `json:"mobile_phone" db:"mobile_phone"`
	ClassName   string        `json:"class_name" db:"class_name"`
	Designation string        `json:"designation" db:"designation"`
	Active      bool          `json:"active" db:"active"`
	CreatedAt   sql.NullTime  `json:"created_at" db:"created_at"`
	UpdatedAt   sql.NullTime  `json:"updated_at" db:"updated_at"`
	CreatedBy   sql.NullInt64 `json:"created_by" db:"created_by"`
}

type StudentsFilter struct {
	ID          internal.FilterOnField
	UUID        internal.FilterOnField
	Name        internal.FilterOnField
	Email       internal.FilterOnField
	MobilePhone internal.FilterOnField
	ClassName   internal.FilterOnField
	Designation internal.FilterOnField
	Active      internal.FilterOnField
	CreatedAt   internal.FilterOnField
	UpdatedAt   internal.FilterOnField
	CreatedBy   internal.FilterOnField
	Wheres      []sq.Sqlizer
	Joins       []sq.Sqlizer
	LeftJoins   []sq.Sqlizer
	GroupBys    []string
	Havings     []sq.Sqlizer
}

func (f *StudentsFilter) NewFilter() interface{} {
	if f == nil {
		return &StudentsFilter{}
	}
	return f
}

func (f *StudentsFilter) TableName() string {
	return "`students`"
}

func (f *StudentsFilter) ModuleName() string {
	return "students"
}

func (f *StudentsFilter) IsNil() bool {
	return f == nil
}
func (f *StudentsFilter) AddID(filterType internal.FilterType, v interface{}) {
	f.ID = append(f.ID, map[internal.FilterType]interface{}{filterType: v})
}
func (f *StudentsFilter) AddUUID(filterType internal.FilterType, v interface{}) {
	f.UUID = append(f.UUID, map[internal.FilterType]interface{}{filterType: v})
}
func (f *StudentsFilter) AddName(filterType internal.FilterType, v interface{}) {
	f.Name = append(f.Name, map[internal.FilterType]interface{}{filterType: v})
}
func (f *StudentsFilter) AddEmail(filterType internal.FilterType, v interface{}) {
	f.Email = append(f.Email, map[internal.FilterType]interface{}{filterType: v})
}
func (f *StudentsFilter) AddMobilePhone(filterType internal.FilterType, v interface{}) {
	f.MobilePhone = append(f.MobilePhone, map[internal.FilterType]interface{}{filterType: v})
}
func (f *StudentsFilter) AddClassName(filterType internal.FilterType, v interface{}) {
	f.ClassName = append(f.ClassName, map[internal.FilterType]interface{}{filterType: v})
}
func (f *StudentsFilter) AddDesignation(filterType internal.FilterType, v interface{}) {
	f.Designation = append(f.Designation, map[internal.FilterType]interface{}{filterType: v})
}
func (f *StudentsFilter) AddActive(filterType internal.FilterType, v interface{}) {
	f.Active = append(f.Active, map[internal.FilterType]interface{}{filterType: v})
}
func (f *StudentsFilter) AddCreatedAt(filterType internal.FilterType, v interface{}) {
	f.CreatedAt = append(f.CreatedAt, map[internal.FilterType]interface{}{filterType: v})
}
func (f *StudentsFilter) AddUpdatedAt(filterType internal.FilterType, v interface{}) {
	f.UpdatedAt = append(f.UpdatedAt, map[internal.FilterType]interface{}{filterType: v})
}
func (f *StudentsFilter) AddCreatedBy(filterType internal.FilterType, v interface{}) {
	f.CreatedBy = append(f.CreatedBy, map[internal.FilterType]interface{}{filterType: v})
}

func (f *StudentsFilter) Where(v sq.Sqlizer) *StudentsFilter {
	f.Wheres = append(f.Wheres, v)
	return f
}

func (f *StudentsFilter) Join(j sq.Sqlizer) *StudentsFilter {
	f.Joins = append(f.Joins, j)
	return f
}

func (f *StudentsFilter) LeftJoin(j sq.Sqlizer) *StudentsFilter {
	f.LeftJoins = append(f.LeftJoins, j)
	return f
}

func (f *StudentsFilter) GroupBy(gb string) *StudentsFilter {
	f.GroupBys = append(f.GroupBys, gb)
	return f
}

func (f *StudentsFilter) Having(h sq.Sqlizer) *StudentsFilter {
	f.Havings = append(f.Havings, h)
	return f
}

type StudentsCreate struct {
	UUID        string        `json:"uuid" db:"uuid"`
	Name        string        `json:"name" db:"name"`
	Email       string        `json:"email" db:"email"`
	MobilePhone string        `json:"mobile_phone" db:"mobile_phone"`
	ClassName   string        `json:"class_name" db:"class_name"`
	Designation string        `json:"designation" db:"designation"`
	CreatedBy   sql.NullInt64 `json:"created_by" db:"created_by"`
}

// TODO: We have to exclude AutoGenerated fields
// For now I am keeping it in, as not sure how it affects
type StudentsUpdate struct {
	UUID        *string        // uuid
	Name        *string        // name
	Email       *string        // email
	MobilePhone *string        // mobile_phone
	ClassName   *string        // class_name
	Designation *string        // designation
	Active      *bool          // active
	CreatedBy   *sql.NullInt64 // created_by
}

// helper functions
func (u *StudentsUpdate) ToStudentsCreate() (res StudentsCreate, err error) {
	if u.UUID != nil {
		res.UUID = *u.UUID
	} else {
		return res, errors.New("Value Can not be NULL")
	}
	if u.Name != nil {
		res.Name = *u.Name
	} else {
		return res, errors.New("Value Can not be NULL")
	}
	if u.Email != nil {
		res.Email = *u.Email
	} else {
		return res, errors.New("Value Can not be NULL")
	}
	if u.MobilePhone != nil {
		res.MobilePhone = *u.MobilePhone
	} else {
		return res, errors.New("Value Can not be NULL")
	}
	if u.ClassName != nil {
		res.ClassName = *u.ClassName
	} else {
		return res, errors.New("Value Can not be NULL")
	}
	if u.Designation != nil {
		res.Designation = *u.Designation
	} else {
		return res, errors.New("Value Can not be NULL")
	}
	if u.CreatedBy != nil {
		res.CreatedBy = *u.CreatedBy
	}
	return res, nil
}

type ListStudents struct {
	TotalCount int
	Data       []Students
}

func (l *ListStudents) GetAllID() []int {
	var res []int
	for _, item := range l.Data {
		res = append(res, item.ID)
	}
	return res
}
func (l *ListStudents) GetAllUUID() []string {
	var res []string
	for _, item := range l.Data {
		res = append(res, item.UUID)
	}
	return res
}
func (l *ListStudents) GetAllName() []string {
	var res []string
	for _, item := range l.Data {
		res = append(res, item.Name)
	}
	return res
}
func (l *ListStudents) GetAllEmail() []string {
	var res []string
	for _, item := range l.Data {
		res = append(res, item.Email)
	}
	return res
}
func (l *ListStudents) GetAllMobilePhone() []string {
	var res []string
	for _, item := range l.Data {
		res = append(res, item.MobilePhone)
	}
	return res
}
func (l *ListStudents) GetAllClassName() []string {
	var res []string
	for _, item := range l.Data {
		res = append(res, item.ClassName)
	}
	return res
}
func (l *ListStudents) GetAllDesignation() []string {
	var res []string
	for _, item := range l.Data {
		res = append(res, item.Designation)
	}
	return res
}
func (l *ListStudents) GetAllActive() []bool {
	var res []bool
	for _, item := range l.Data {
		res = append(res, item.Active)
	}
	return res
}
func (l *ListStudents) GetAllCreatedAt() []sql.NullTime {
	var res []sql.NullTime
	for _, item := range l.Data {
		res = append(res, item.CreatedAt)
	}
	return res
}
func (l *ListStudents) GetAllUpdatedAt() []sql.NullTime {
	var res []sql.NullTime
	for _, item := range l.Data {
		res = append(res, item.UpdatedAt)
	}
	return res
}
func (l *ListStudents) GetAllCreatedBy() []sql.NullInt64 {
	var res []sql.NullInt64
	for _, item := range l.Data {
		res = append(res, item.CreatedBy)
	}
	return res
}

func (l *ListStudents) Filter(f func(item Students) bool) (res ListStudents) {
	for _, item := range l.Data {
		if f(item) {
			res.Data = append(res.Data, item)
		}
	}
	res.TotalCount = len(res.Data)
	return res
}

func (l *ListStudents) Find(f func(item Students) bool) (res Students, found bool) {
	for _, item := range l.Data {
		if f(item) {
			return item, true
		}
	}
	return Students{}, false
}

func (l *ListStudents) MapByEmail() (m map[string]ListStudents) {
	m = make(map[string]ListStudents)
	for _, item := range l.Data {
		list := m[item.Email]
		list.Data = append(list.Data, item)

		m[item.Email] = list
	}
	for k, v := range m {
		v.TotalCount = len(v.Data)
		m[k] = v
	}
	return m
}

func (l *ListStudents) MapByUUID() (m map[string]ListStudents) {
	m = make(map[string]ListStudents)
	for _, item := range l.Data {
		list := m[item.UUID]
		list.Data = append(list.Data, item)

		m[item.UUID] = list
	}
	for k, v := range m {
		v.TotalCount = len(v.Data)
		m[k] = v
	}
	return m
}

func (l *ListStudents) MapByName() (m map[string]ListStudents) {
	m = make(map[string]ListStudents)
	for _, item := range l.Data {
		list := m[item.Name]
		list.Data = append(list.Data, item)

		m[item.Name] = list
	}
	for k, v := range m {
		v.TotalCount = len(v.Data)
		m[k] = v
	}
	return m
}

func (l *ListStudents) MapByCreatedBy() (m map[sql.NullInt64]ListStudents) {
	m = make(map[sql.NullInt64]ListStudents)
	for _, item := range l.Data {
		list := m[item.CreatedBy]
		list.Data = append(list.Data, item)

		m[item.CreatedBy] = list
	}
	for k, v := range m {
		v.TotalCount = len(v.Data)
		m[k] = v
	}
	return m
}

func (l *ListStudents) MapByID() (m map[int]Students) {
	m = make(map[int]Students, len(l.Data))
	for _, item := range l.Data {
		m[item.ID] = item
	}
	return m
}
